--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="element clearfix col1-3 grey home"> 
-                <a href="./images/documents/CV_JosephTaylor.pdf" data-title="" target="_blank" class="whole-tile">
+                <a href="mailto:josphtaylor@gmail.com" title="CV Request" target="_blank" class="whole-tile">
                     <p class="small">The CV</p>
                     <h3>Download a copy of my Resum&eacute;</h3>
                 <div class="bottom">
@@ -161,73 +161,73 @@
 <!-- End Home Items -->              
 <!-- Start Portfolio Thumbs -->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#pad" title="">
-              <picture class="images"> <img src="images/iPad/thumbs.jpg" srcset="images/iPad/thumbs.jpg 1x, images/iPad/thumbs@2x.jpg 1.5x" alt="<span>Digital Publication</span><i>→</i>" class="slip" /> </picture>
+              <picture class="images"> <img src="images/iPad/thumbs.jpg" srcset="images/iPad/thumbs.jpg 1x, images/iPad/thumbs@2x.jpg 1.5x" alt="Digital Publication" class="slip" /> </picture>
               </a>
             </div><!--Vienna--> 
             <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#whtmtn" title="White Mountaineering">
-                  <picture class="images"> <img src="images/whtmtn/thumbs.jpg" srcset="images/whtmtn/thumbs.jpg 1x, images/whtmtn/thumbs@2x.jpg 1.5x" alt="<span>White Mountaineering</span><i>→</i>" class="slip" /> </picture> </a>
+                  <picture class="images"> <img src="images/whtmtn/thumbs.jpg" srcset="images/whtmtn/thumbs.jpg 1x, images/whtmtn/thumbs@2x.jpg 1.5x" alt="White Mountaineering" class="slip" /> </picture> </a>
             </div><!--WhiteMount-->
             <div class="element clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.anchorage1770.com" target="_blank" title="Anchorage 1770">
-                    <picture class="images"> <img src="images/anchorage/thumbs.jpg" srcset="images/anchorage/thumbs.jpg 1x, images/anchorage/thumbs@2x.jpg 1.5x" alt="<span>Anchorage 1770<br></>Visit Site</span><i>→</i>" class="slip" /> </picture>
+                    <picture class="images"> <img src="images/anchorage/thumbs.jpg" srcset="images/anchorage/thumbs.jpg 1x, images/anchorage/thumbs@2x.jpg 1.5x" alt="Anchorage 1770<br></>Visit Site" class="slip" /> </picture>
                 </a>
             </div><!--Anchorage-->
             <div class="element clearfix col2-3 auto portfolio">
                 <picture class="images">
-                    <img src="images/ill/items2.jpg" srcset="images/ill/items2.jpg 1x, images/ill/items2.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="" />
+                    <img src="images/ill/items2.jpg" srcset="images/ill/items2.jpg 1x, images/ill/items2.jpg 1.5x" alt="Getting Ill" class="" />
                 </picture>
             </div><!--Supercussion-->
             <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#bjs" title="BJ's Wholesale">
-                  <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="<span>BJ's Wholesale</span><i>→</i>" class="slip" /> </picture> </a>
+                  <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="BJ's Wholesale" class="slip" /> </picture> </a>
             </div><!--BJS-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="#logo" title="Logos">
-                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="<span>Logo Designs</span><i>→</i>" class="slip" /> </picture>
+                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="Logo Designs" class="slip" /> </picture>
                 </a> 
             </div><!--Logos-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="#book" title="Print Design">
-                    <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="<span>Book Design</span><i>→</i>" class="slip" /> </picture>
+                    <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="Print<br></>Publication" class="slip" /> </picture>
                 </a> 
             </div><!--Book-->
             
             <div class="element clearfix col2-3 auto portfolio">
                 <picture class="images">
-                    <img src="images/ill/items5.jpg" srcset="images/ill/items5.jpg 1x, images/ill/items5.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="" />
+                    <img src="images/ill/items5.jpg" srcset="images/ill/items5.jpg 1x, images/ill/items5.jpg 1.5x" alt="Getting Ill" class="" />
                 </picture>
             </div><!--Large Art Print-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#vans" title="Vans">
-              <picture class="images"> <img src="images/vans/thumbs.jpg" srcset="images/vans/thumbs.jpg 1x, images/vans/thumbs-lrg.jpg 1.5x" alt="<span>Off The Wall!</span><i>→</i>" class="slip" /> </picture> </a>
+              <picture class="images"> <img src="images/vans/thumbs.jpg" srcset="images/vans/thumbs.jpg 1x, images/vans/thumbs-lrg.jpg 1.5x" alt="Off The Wall!" class="slip" /> </picture> </a>
             </div><!--VANS-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#maine" title="The Maine String">
-              <picture class="images"> <img src="images/tms/thumbs.jpg" srcset="images/tms/thumbs.jpg 1x, images/tms/thumbs-lrg.jpg 1.5x" alt="<span>The Maine String</span><i>→</i>" class="slip" /> </picture> </a>
+              <picture class="images"> <img src="images/tms/thumbs.jpg" srcset="images/tms/thumbs.jpg 1x, images/tms/thumbs-lrg.jpg 1.5x" alt="The Maine String" class="slip" /> </picture> </a>
             </div><!--MaineString-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#deer" title="">
-              <picture class="images"> <img src="images/deerbrooke/thumbs.jpg" srcset="images/deerbrooke/thumbs.jpg 1x, images/deerbrooke/thumbs@2x.jpg 1.5x" alt="<span>Art Direction</span><i>→</i>" class="slip" /> </picture>
+              <picture class="images"> <img src="images/deerbrooke/thumbs.jpg" srcset="images/deerbrooke/thumbs.jpg 1x, images/deerbrooke/thumbs@2x.jpg 1.5x" alt="Art Direction" class="slip" /> </picture>
               </a>
             </div><!--Deerbrooke-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#tees" title="">
-              <picture class="images"> <img src="images/tee/thumbs.jpg" srcset="images/tee/thumbs.jpg 1x, images/tee/thumbs@2x.jpg 1.5x" alt="<span>Teeeeees</span><i>→</i>" class="slip" /> </picture>
+              <picture class="images"> <img src="images/tee/thumbs.jpg" srcset="images/tee/thumbs.jpg 1x, images/tee/thumbs@2x.jpg 1.5x" alt="Teeeeees" class="slip" /> </picture>
               </a>
             </div><!--Tees-->
             <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="https://www.platinumabq.com" target="_blank" title="Platinum ABQ">
-                    <picture class="images"> <img src="images/platinum/thumbs.jpg" srcset="images/platinum/thumbs.jpg 1x, images/platinum/thumbs@2x.jpg 1.5x" alt="<span>Platinum ABQ<br></>Visit Site</span><i>→</i>" class="slip" /> </picture>
+                <a class="folioLink" href="https://www.platinumabq.com/the-units.html" target="_blank" title="Platinum ABQ">
+                    <picture class="images"> <img src="images/platinum/thumbs.jpg" srcset="images/platinum/thumbs.jpg 1x, images/platinum/thumbs@2x.jpg 1.5x" alt="Platinum ABQ<br></>Visit Site" class="slip" /> </picture>
                 </a>
             </div><!--Platinum-->
             <div class="element clearfix col1-3 portfolio">
                 <picture class="images">
-                    <img src="images/ill/thumbs.jpg" srcset="images/ill/thumbs.jpg 1x, images/ill/thumbs.jpg 1.5x" alt="<span>Getting Ill</span><i>→</i>" class="" />
+                    <img src="images/ill/thumbs.jpg" srcset="images/ill/thumbs.jpg 1x, images/ill/thumbs.jpg 1.5x" alt="Getting Ill" class="" />
                 </picture>
             </div><!--GracePhoto-->
             <div class="element  clearfix col2-3 auto portfolio">
                 <picture class="images">
-                    <img src="images/posters/items1.jpg" srcset="images/posters/items1.jpg 1x, images/posters/items1.jpg 1.5x" alt="<span>MAss Art</span><i>→</i>" class="" />
+                    <img src="images/posters/items1.jpg" srcset="images/posters/items1.jpg 1x, images/posters/items1.jpg 1.5x" alt="MAss Art" class="" />
                 </picture>
             </div><!--MAssArt-->
             <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="https://www.12oaksnc.com" target="_blank" title="12Oaks North Carolina">
-                    <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="<span>12 Oaks<br></>Visit Site</span><i>→</i>" class="slip linkto" /> </picture>
+                <a class="folioLink" href="https://www.12oaksnc.com/holly-springs/community-map/" target="_blank" title="12Oaks North Carolina">
+                    <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="12 Oaks<br></>Visit Site" class="slip linkto" /> </picture>
                 </a>
             </div><!--12 Oaks-->
 <!-- End Portfolio Thumbs -->            
@@ -279,6 +279,53 @@
 </div>
 <!-- End Folio Item -->
 
+<!--  Staples Folio Item
+<div class="element clearfix col2-3 full staples">
+<picture class="images">
+    <source srcset="images/whtmtn/item1.jpg 1000w, images/whtmtn/item1-lrg.jpg 2000w" />
+    <img src="images/whtmtn/item1.jpg" alt="White Mountaineering Notebook Cover" />
+</picture>
+<div class="break"></div>
+<picture class="images">
+    <source srcset="images/whtmtn/item2.jpg 1000w, images/whtmtn/item2-lrg.jpg 2000w" />
+    <img src="images/whtmtn/item2.jpg" alt="White Mountaineering Stockists" /></picture>
+<div class="break"></div>
+<picture class="images">
+    <source srcset="images/whtmtn/item3.jpg 1000w, images/whtmtn/item3@2x.jpg 2000w" />
+    <img src="images/whtmtn/item3.jpg"alt="White Mountaineering Company Profile" />
+</picture>
+<div class="break"></div>
+<picture class="images">
+    <source srcset="images/whtmtn/item4.jpg 1000w, images/whtmtn/item4-lrg.jpg 2000w" />
+    <img src="images/whtmtn/item4.jpg" alt="White Mountaineering Winter Styles" />
+</picture>   
+</div>
+<div class="element clearfix col1-3 grey auto staples">
+    <h3><strong>Staples</strong></h3>
+    <div class="ct-part">
+        <p class="small">Category</p>
+        <p>Interactive Design</p>
+    </div>
+    <div class="ft-part">
+        <ul class="social-list">
+            <li><i>Share it:</i></li>
+            <li><a href="https://twitter.com/share" class="twitter" target="_blank"></a></li>
+        </ul>
+    </div>
+    <div class="ft-part student">
+        <p class="small">Sample Work</p>
+    </div>
+</div>
+<div class="element clearfix col1-3 grey auto staples">
+    <h4><strong>Challenge</strong></h4>
+    <p>It’s never straight-forward when it comes to language, and when we combine this with a lifestyle brand that depends so much on visual consistency the bar is set all the way up.</p>
+</div>
+<div class="element clearfix col1-3 grey auto staples">
+    <h4><strong>Solution</strong></h4>
+    <p>Being true is the most important outcome, so in consideration of what the brand is I found that the content was driving the solution and was to be most important in this process.</p>
+</div>
+End Folio Item -->              
+              
 <!--  Book/Print Folio Item -->
 <div class="element clearfix col2-3 full book">
 <picture class="images">
