--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <nav id="main-nav">
     <div id="menu-close-button">&times;</div>
     <ul id="options" class="option-set clearfix" data-option-key="filter">
-      <li class="folioLink"> <a href="#home">Profile</a> </li>
+      <li> <a class="folioLink" href="#home">Profile</a> </li>
       <li> <a class="folioLink" href="#portfolio">Portfolio</a> </li>
     </ul>
     <div class="social-links">
