--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <h3><strong>White Mountaineering</strong></h3>
     <div class="ct-part">
         <p class="small">Category</p>
-        <p>Layout Design</p>
+        <p>Publication Design</p>
     </div>
     <div class="ft-part">
         <ul class="social-list">
@@ -365,7 +365,7 @@ End Folio Item -->
 </div>
 <div class="element clearfix col1-3 grey auto book">
     <h4><strong>Solution</strong></h4>
-    <p>Print design will never go away. While it can be challenging to design without the interaction that digital provides, print requires the designer to have an even deeper understanding of the content and it's heirarchy.</p>
+    <p>Print design will never go away. While it can be challenging to design without the interaction that digital provides, print requires the designer to have an even deeper understanding of the content and it's hierarchy.</p>
 </div>
 <!-- End Folio Item -->
               
@@ -524,7 +524,7 @@ End Folio Item -->
 </div>
 <div class="element clearfix col1-3 grey auto maine">
     <h4><strong>Challenge</strong></h4>
-    <p>Home-made Knitware shop needed new logo and packaging. Something fresh and modern, while remaining true to what Mainers are.</p>
+    <p>Home-made Knitwear shop needed new logo and packaging. Something fresh and modern, while remaining true to what Mainers are.</p>
 </div>
 <div class="element clearfix col1-3 grey auto maine">
     <h4><strong>Solution</strong></h4>
@@ -550,7 +550,7 @@ End Folio Item -->
     <h3><strong>Logo and Brand Identity</strong></h3>
     <div class="ct-part">
         <p class="small">Category</p>
-        <p>Logo Design</p>
+        <p>Icon &amp; Logo Design</p>
         <p class="small">Position</p>
         <p>Design Direction</p>
     </div>
@@ -618,7 +618,7 @@ End Folio Item -->
     <h3><strong>Digital Publication</strong></h3>
     <div class="ct-part">
         <p class="small">Category</p>
-        <p>Graphic Design</p>
+        <p>Publication Design</p>
     </div>
     <div class="ft-part">
         <ul class="social-list">
