--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <!--[if IE 7]>     <html class="no-js ie7 lt-ie10 lt-ie9 lt-ie8 oldie" lang="en-US"> <![endif]-->
 <!--[if IE 8]>     <html class="no-js ie8 lt-ie10 lt-ie9 oldie" lang="en-US"> <![endif]-->
 <!--[if IE 9]>     <html class="no-js ie9 lt-ie10 oldie" lang="en-US"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" dir="ltr" lang="en-US"> <!--<![endif]-->
-<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js" dir="ltr" lang="en-US"> <!--<![endif]-->
+    <head>
 <meta charset="utf-8" />
 <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
 <title>J. Taylor | Visual Design</title>
@@ -24,7 +25,7 @@
 <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet" type="text/css" />
 <script src="js/modernizr.js" type="text/javascript"></script>
 </head>
-<body>
+    <body>
     
 <!-- Preloader -->
 <div id="preloader">
@@ -85,9 +86,9 @@
               <h2>To engage an audience with excitement and youthful imagination. To truly feel every day that greatness is just around the corner.<br>That's the goal.</h2>
             </div> 
             <div class="element clearfix col1-3 portfolio home hybrid offWhite">
-                <figure class="images"> 
+                <!--<figure class="images"> 
                   <img src="images/about02.jpg" srcset="images/about02.jpg 1x, images/about02-lrg.jpg 1.5x" alt="Joseph Taylor" /> 
-                </figure>
+                </figure>-->
                 <div class="elem-content">
                     <p class="small">Design Focused</p>
                     <h3 class="">Joseph Taylor</h3>
@@ -385,11 +386,7 @@ End Folio Item -->
 <picture class="images">
     <source srcset="images/bjs/item3.jpg 1000w, images/bjs/item3@2x.jpg 2000w" />
     <img src="images/bjs/item3.jpg"alt="Bjs Wholesale" />
-</picture>
-<div class="break"></div>
-<picture class="images">
-    <source srcset="images/bjs/item2.jpg 1000w, images/bjs/item2@2x.jpg 2000w" />
-    <img src="images/bjs/item2.jpg" alt="Bjs Wholesale" /></picture>   
+</picture>  
 </div>
 <div class="element clearfix col1-3 grey auto bjs">
     <h3><strong>BJ's Wholesale Club</strong></h3>
@@ -536,15 +533,15 @@ End Folio Item -->
 <div class="element clearfix col2-3 full logo">
     <picture class="images"><img src="images/branding/logo-3.jpg" alt="Pax Industries Logo" /> </picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-1.jpg" alt="Euclid Labs Logo" /></picture>
+    <picture class="images"> <img src="images/branding/logo-2.jpg" alt="Euclid Labs Logo" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-2.jpg" alt="Molecule Research Logo" /></picture>
+    <picture class="images"> <img src="images/branding/logo-5.jpg" alt="Molecule Research Logo" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/branding/logo-4.jpg" alt="Blume Financials Logo" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-6.jpg" alt="RyngCom Logo" /></picture>
+    <picture class="images"> <img src="images/branding/logo-1.jpg" alt="RyngCom Logo" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-5.jpg" alt="Pur Business Logo" /></picture>       
+    <picture class="images"> <img src="images/branding/logo-6.jpg" alt="Pur Business Logo" /></picture>       
 </div>
 <div class="element clearfix col1-3 grey auto logo">
     <h3><strong>Logo and Brand Identity</strong></h3>
