--- a/index.html
+++ b/index.html
@@ -283,22 +283,22 @@
 <!--  Staples Folio Item
 <div class="element clearfix col2-3 full staples">
 <picture class="images">
-    <source srcset="images/whtmtn/item1.jpg 1000w, images/whtmtn/item1-lrg.jpg 2000w" />
-    <img src="images/whtmtn/item1.jpg" alt="White Mountaineering Notebook Cover" />
+    <source srcset="images/staples/item1.jpg 1000w, images/staples/item1-lrg.jpg 2000w" />
+    <img src="images/staples/item1.jpg" alt="UI 1" />
 </picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/whtmtn/item2.jpg 1000w, images/whtmtn/item2-lrg.jpg 2000w" />
-    <img src="images/whtmtn/item2.jpg" alt="White Mountaineering Stockists" /></picture>
+    <source srcset="images/staples/item2.jpg 1000w, images/staples/item2-lrg.jpg 2000w" />
+    <img src="images/staples/item2.jpg" alt="UI 2" /></picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/whtmtn/item3.jpg 1000w, images/whtmtn/item3@2x.jpg 2000w" />
-    <img src="images/whtmtn/item3.jpg"alt="White Mountaineering Company Profile" />
+    <source srcset="images/staples/item3.jpg 1000w, images/staples/item3@2x.jpg 2000w" />
+    <img src="images/staples/item3.jpg"alt="UI 3" />
 </picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/whtmtn/item4.jpg 1000w, images/whtmtn/item4-lrg.jpg 2000w" />
-    <img src="images/whtmtn/item4.jpg" alt="White Mountaineering Winter Styles" />
+    <source srcset="images/staples/item4.jpg 1000w, images/staples/item4-lrg.jpg 2000w" />
+    <img src="images/staples/item4.jpg" alt="UI 4" />
 </picture>   
 </div>
 <div class="element clearfix col1-3 grey auto staples">
@@ -319,11 +319,7 @@
 </div>
 <div class="element clearfix col1-3 grey auto staples">
     <h4><strong>Challenge</strong></h4>
-    <p>It’s never straight-forward when it comes to language, and when we combine this with a lifestyle brand that depends so much on visual consistency the bar is set all the way up.</p>
-</div>
-<div class="element clearfix col1-3 grey auto staples">
-    <h4><strong>Solution</strong></h4>
-    <p>Being true is the most important outcome, so in consideration of what the brand is I found that the content was driving the solution and was to be most important in this process.</p>
+    <p>Staples info here, tell the people who they are working with now, baby</p>
 </div>
 End Folio Item -->              
               
