--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
                 </picture>
                 </a>
             </div><!--GracePhoto-->
-            <div class="element  clearfix col2-3 auto portfolio">
+            <!--<div class="element  clearfix col2-3 auto portfolio">
                 <picture class="images">
                     <img src="images/posters/items1.jpg" srcset="images/posters/items1.jpg 1x, images/posters/items1.jpg 1.5x" alt="MAss Art" class="" />
                 </picture>
-            </div><!--MAssArt-->
+            </div>MAssArt-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.12oaksnc.com/holly-springs/community-map/" target="_blank" title="12Oaks North Carolina">
                     <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="12 Oaks<br></>Visit Site" class="slip linkto" /> </picture>
