--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!-- Start Home Items -->              
             <div class="element clearfix col2-3 home white grid-fit">
               <p class="small">Making Waves</p>
-              <h2>To engage an audience with excitement and youthful imagination. To truly feel every day that greatness is just around the corner.<br>That's the goal.</h2>
+              <h2>To engage an audience with excitement and youthful imagination. To truly feel greatness every day.<br>That's the goal.</h2>
             </div> 
             <div class="element clearfix col1-3 portfolio home hybrid offWhite">
                 <!--<figure class="images"> 
