--- a/index.html
+++ b/index.html
@@ -182,20 +182,20 @@
                   <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="BJ's Wholesale" class="slip" /> </picture> </a>
             </div><!--BJS-->
             <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="#logo" title="Logos">
-                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="Logo Designs" class="slip" /> </picture>
+                <a class="folioLink" href="#book" title="Print Design">
+                    <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="Print<br></>Publication" class="slip" /> </picture>
                 </a> 
-            </div><!--Logos-->
+            </div><!--Book-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.12oaksnc.com/holly-springs/community-map/" target="_blank" title="12Oaks North Carolina">
                     <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="12 Oaks<br></>Visit Site" class="slip linkto" /> </picture>
                 </a>
             </div><!--12 Oaks-->
             <div class="element  clearfix col1-3 portfolio">
-                <a class="folioLink" href="#book" title="Print Design">
-                    <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="Print<br></>Publication" class="slip" /> </picture>
+                <a class="folioLink" href="#logo" title="Logos">
+                    <picture class="images"> <img src="images/branding/thumb.jpg" srcset="images/branding/thumb.jpg 1x, images/branding/thumbs@2x.jpg 1.5x" alt="Logo Designs" class="slip" /> </picture>
                 </a> 
-            </div><!--Book-->
+            </div><!--Logos-->
             <div class="element clearfix col2-3 auto portfolio">
                 <picture class="images">
                     <img src="images/ill/items5.jpg" srcset="images/ill/items5.jpg 1x, images/ill/items5.jpg 1.5x" alt="Getting Ill" class="" />
@@ -375,13 +375,18 @@
 </picture>
 <div class="break"></div>
 <picture class="images">
+    <source srcset="images/bjs/item6.jpg 1000w, images/bjs/item6@2x.jpg 2000w" />
+    <img src="images/bjs/item6.jpg" alt="Bjs Wholesale" />
+</picture>    
+<div class="break"></div>
+<picture class="images">
     <source srcset="images/bjs/item4.jpg 1000w, images/bjs/item4@2x.jpg 2000w" />
     <img src="images/bjs/item4.jpg" alt="Bjs Wholesale" />
 </picture>    
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/bjs/item3.jpg 1000w, images/bjs/item3@2x.jpg 2000w" />
-    <img src="images/bjs/item3.jpg"alt="Bjs Wholesale" />
+    <source srcset="images/bjs/item5.jpg 1000w, images/bjs/item5@2x.jpg 2000w" />
+    <img src="images/bjs/item5.jpg"alt="Bjs Wholesale" />
 </picture>  
 </div>
 <div class="element clearfix col1-3 grey auto bjs">
@@ -527,7 +532,7 @@
               
 <!-- Logos Folio Item -->
 <div class="element clearfix col2-3 full logo">
-    <picture class="images"><img src="images/branding/logo-3.jpg" alt="Pax Industries Logo" /> </picture>
+    <picture class="images"><img src="images/branding/items1.jpg" alt="Pax Industries Logo" /> </picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/branding/logo-2.jpg" alt="Euclid Labs Logo" /></picture>
     <div class="break"></div>
@@ -663,18 +668,18 @@
 <!-- ill FOlio Item -->
 <div class="element clearfix col2-3 full ill">
 <picture class="images">
-    <source srcset="images/ill/items1.jpg 1000w, images/ill/items1@2x.jpg 2000w" />
-    <img src="images/ill/items1.jpg" alt="" />
+    <source srcset="images/ill/item3.jpg 1000w, images/ill/items3.jpg 2000w" />
+    <img src="images/ill/items3.jpg" alt="" /></picture>
+<div class="break"></div>
+<picture class="images">
+    <source srcset="images/ill/items10.jpg 1000w, images/ill/items10@2x.jpg 2000w" />
+    <img src="images/ill/items10.jpg" alt="" />
 </picture>
 <div class="break"></div>  
 <picture class="images">
-    <source srcset="images/ill/items2.jpg 1000w, images/ill/items2@2x.jpg 2000w" />
+    <source srcset="images/ill/items2.jpg 1000w, images/ill/items2.jpg 2000w" />
     <img src="images/ill/items2.jpg" alt="Shoes" />
 </picture>
-<div class="break"></div>
-<picture class="images">
-    <source srcset="images/ill/item3.jpg 1000w, images/ill/items3@2x.jpg 2000w" />
-    <img src="images/ill/items3.jpg" alt="" /></picture>
 <div class="break"></div>
 <picture class="images">
     <source srcset="images/ill/items4.jpg 1000w, images/ill/items4@2x.jpg 2000w" />
