--- a/index.html
+++ b/index.html
@@ -326,23 +326,29 @@
 <!--  Book/Print Folio Item -->
 <div class="element clearfix col2-3 full book">
 <picture class="images">
+    <source srcset="images/book/item5.jpg 1000w, images/book/item5@2x.jpg 2000w" />
+    <img src="images/book/item5.jpg" alt="On the Off Ramp" />
+</picture>
+<div class="break"></div>
+<picture class="images">
     <source srcset="images/poster/items1.jpg 1000w, images/posters/items1.jpg 2000w" />
     <img src="images/posters/items1.jpg" alt="Sikander Poster" />
 </picture>
 <div class="break"></div>
-<picture class="images">
-    <source srcset="images/book/item2.jpg 1000w, images/book/item2@2x.jpg 2000w" />
-    <img src="images/book/item2.jpg" alt="On the Off Ramp" /></picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/book/item4.jpg 1000w, images/book/item4.jpg 2000w" />
-    <img src="images/book/item4.jpg"alt="Wheels of steel" />
+    <source srcset="images/book/item6.jpg 1000w, images/book/item6.jpg 2000w" />
+    <img src="images/book/item6.jpg"alt="Wheels of steel" />
 </picture>
 <div class="break"></div>
 <picture class="images">
     <source srcset="images/ill/items2.jpg 1000w, images/ill/items2.jpg 2000w" />
     <img src="images/ill/items2.jpg"alt="Wheels of steel" />
-</picture>    
+</picture>
+<picture class="images">
+    <source srcset="images/book/item2.jpg 1000w, images/book/item2.jpg 2000w" />
+    <img src="images/book/item2.jpg"alt="Wheels of steel" />
+</picture> 
 </div>
 <div class="element clearfix col1-3 grey auto book">
     <h3><strong>Publication</strong></h3>
@@ -610,9 +616,9 @@
 <div class="element clearfix col2-3 full pad">
     <picture class="images"> <img src="images/iPad/items1.jpg" srcset="images/iPad/items1.jpg 1x, images/iPad/items1@2x.jpg 1.5x" alt="Courting Vienna iPad Publication" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/iPad/items2.jpg" srcset="images/iPad/items2.jpg 1x, images/iPad/items2@2x.jpg 1.5x" alt="Courting Vienna iPad Publication" /></picture>
+    <picture class="images"> <img src="images/iPad/items4.jpg" srcset="images/iPad/items4.jpg 1x, images/iPad/items4@2x.jpg 1.5x" alt="Courting Vienna iPad Publication" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/iPad/items3.jpg" srcset="images/iPad/items3.jpg 1x, images/iPad/items3@2x.jpg 1.5x" alt="Courting Vienna iPad Publication" /></picture>  
+    <picture class="images"> <img src="images/iPad/items3.jpg" srcset="images/iPad/items3.jpg 1x, images/iPad/items3@2x.jpg 1.5x" alt="Courting Vienna iPad Publication" /></picture>
 </div>
 <div class="element clearfix col1-3 grey auto pad">
     <h3><strong>Digital Publication</strong></h3>
@@ -668,8 +674,9 @@
 <!-- ill FOlio Item -->
 <div class="element clearfix col2-3 full ill">
 <picture class="images">
-    <source srcset="images/ill/item3.jpg 1000w, images/ill/items3.jpg 2000w" />
-    <img src="images/ill/items3.jpg" alt="" /></picture>
+    <source srcset="images/ill/items11.jpg 1000w, images/ill/items11@2x.jpg 2000w" />
+    <img src="images/ill/items11.jpg" alt="Shoes" />
+</picture>
 <div class="break"></div>
 <picture class="images">
     <source srcset="images/ill/items10.jpg 1000w, images/ill/items10@2x.jpg 2000w" />
@@ -677,13 +684,12 @@
 </picture>
 <div class="break"></div>  
 <picture class="images">
-    <source srcset="images/ill/items2.jpg 1000w, images/ill/items2.jpg 2000w" />
-    <img src="images/ill/items2.jpg" alt="Shoes" />
-</picture>
+    <source srcset="images/ill/item3.jpg 1000w, images/ill/items3.jpg 2000w" />
+    <img src="images/ill/items3.jpg" alt="" /></picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/ill/items4.jpg 1000w, images/ill/items4@2x.jpg 2000w" />
-    <img src="images/ill/items4.jpg"alt="" />
+    <source srcset="images/ill/items12.jpg 1000w, images/ill/items12@2x.jpg 2000w" />
+    <img src="images/ill/items12.jpg"alt="" />
 </picture> 
 </div>
 <div class="element  clearfix col1-3 grey auto ill">
