--- a/index.html
+++ b/index.html
@@ -326,11 +326,6 @@
 <!--  Book/Print Folio Item -->
 <div class="element clearfix col2-3 full book">
 <picture class="images">
-    <source srcset="images/book/item5.jpg 1000w, images/book/item5@2x.jpg 2000w" />
-    <img src="images/book/item5.jpg" alt="On the Off Ramp" />
-</picture>
-<div class="break"></div>
-<picture class="images">
     <source srcset="images/poster/items1.jpg 1000w, images/posters/items1.jpg 2000w" />
     <img src="images/posters/items1.jpg" alt="Sikander Poster" />
 </picture>
@@ -580,13 +575,15 @@
               
 <!-- Tees Folio Item -->
 <div class="element clearfix col2-3 full tees">
-    <picture class="images"> <img src="images/tee/items5.jpg" srcset="images/tee/items5.jpg 1x, images/tee/items5@2x.jpg 1.5x" alt="Geometric Cat Tee-Shirt" /></picture>
+    <picture class="images"> <img src="images/tee/items7.jpg" srcset="images/tee/items7.jpg 1x, images/tee/items7@2x.jpg 1.5x" alt="Geometric Cat Tee-Shirt" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/tee/items4.jpg" srcset="images/tee/items4.jpg 1x, images/tee/items4@2x.jpg 1.5x" alt="Geometric Cat Tee-Shirt" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/tee/items2.jpg" srcset="images/tee/items2.jpg 1x, images/tee/items2@2x.jpg 1.5x" alt="H8NoMore Tee-Shirt" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/tee/items6.jpg" srcset="images/tee/items6.jpg 1x, images/tee/items6@2x.jpg 1.5x" alt="Simulator Brand Tee-Shirt" /></picture>  
+    <picture class="images"> <img src="images/tee/items6.jpg" srcset="images/tee/items6.jpg 1x, images/tee/items6@2x.jpg 1.5x" alt="Simulator Brand Tee-Shirt" /></picture>
+    <div class="break"></div>
+    <picture class="images"> <img src="images/tee/items5.jpg" srcset="images/tee/items5.jpg 1x, images/tee/items5@2x.jpg 1.5x" alt="Simulator Brand Tee-Shirt" /></picture>
 </div>
 <div class="element clearfix col1-3 grey auto tees">
     <h3><strong>Apparel Graphics</strong></h3>
@@ -642,7 +639,7 @@
 </div>
               
 <!-- Sneaks FOlio Item -->
-<div class="element clearfix col2-3 full sneaks">
+<div class="element clearfix col3-3 full sneaks">
 <picture class="images">
     <source srcset="images/sneaks/items9.jpg 1000w, images/sneaks/items9@2x.jpg 2000w" />
     <img src="images/sneaks/items9.jpg" alt="" />
@@ -662,6 +659,22 @@
     <img src="images/sneaks/items7.jpg"alt="" />
 </picture> 
 </div>
+<div class="element clearfix col1-3 grey auto sneaks">
+    <h3><strong>Shoes for you's</strong></h3>
+    <div class="ct-part">
+        <p class="small">Category</p>
+        <p>Digital Ilustration</p>
+    </div>
+    <div class="ft-part">
+        <ul class="social-list">
+            <li><i>Share it:</i></li>
+            <li><a href="https://twitter.com/share" class="twitter" target="_blank"></a></li>
+        </ul>
+    </div>
+    <div class="ft-part student">
+        <p class="small">Sample Work</p>
+    </div>
+</div>
 <div class="element  clearfix col1-3 grey auto sneaks">
     <div class="icon-holder quote"></div>
         <blockquote>
@@ -679,6 +692,11 @@
 </picture>
 <div class="break"></div>
 <picture class="images">
+    <source srcset="images/posters/items2.jpg 1000w, images/posters/items2@2x.jpg 2000w" />
+    <img src="images/posters/items2.jpg" alt="" />
+</picture>
+<div class="break"></div>
+<picture class="images">
     <source srcset="images/ill/items10.jpg 1000w, images/ill/items10@2x.jpg 2000w" />
     <img src="images/ill/items10.jpg" alt="" />
 </picture>
@@ -691,6 +709,22 @@
     <source srcset="images/ill/items12.jpg 1000w, images/ill/items12@2x.jpg 2000w" />
     <img src="images/ill/items12.jpg"alt="" />
 </picture> 
+</div>
+<div class="element clearfix col1-3 grey auto ill">
+    <h3><strong>Art Print</strong></h3>
+    <div class="ct-part">
+        <p class="small">Category</p>
+        <p>Digital Ilustration</p>
+    </div>
+    <div class="ft-part">
+        <ul class="social-list">
+            <li><i>Share it:</i></li>
+            <li><a href="https://twitter.com/share" class="twitter" target="_blank"></a></li>
+        </ul>
+    </div>
+    <div class="ft-part student">
+        <p class="small">Sample Work</p>
+    </div>
 </div>
 <div class="element  clearfix col1-3 grey auto ill">
     <div class="icon-holder quote"></div>
