--- a/index.html
+++ b/index.html
@@ -537,11 +537,11 @@
     <div class="break"></div>
     <picture class="images"> <img src="images/branding/logo-2.jpg" alt="Euclid Labs Logo" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-5.jpg" alt="Molecule Research Logo" /></picture>
+    <picture class="images"> <img src="images/branding/items3.jpg" alt="Molecule Research Logo" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/branding/logo-4.jpg" alt="Blume Financials Logo" /></picture>
     <div class="break"></div>
-    <picture class="images"> <img src="images/branding/logo-1.jpg" alt="RyngCom Logo" /></picture>
+    <picture class="images"> <img src="images/branding/items2.jpg" alt="RyngCom Logo" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/branding/logo-6.jpg" alt="Pur Business Logo" /></picture>       
 </div>
