--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </picture>
                 </a>
             </div><!--Sneaks-->
-            <div class="element  clearfix col1-3 portfolio">
+            <!--<div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.platinumabq.com/the-units.html" target="_blank" title="Platinum ABQ">
                     <picture class="images"> <img src="images/platinum/thumbs.jpg" srcset="images/platinum/thumbs.jpg 1x, images/platinum/thumbs@2x.jpg 1.5x" alt="Platinum ABQ<br></>Visit Site" class="slip" /> </picture>
                 </a>
@@ -325,6 +325,11 @@
               
 <!--  Book/Print Folio Item -->
 <div class="element clearfix col2-3 full book">
+<picture class="images">
+    <source srcset="images/book/item5.jpg 1000w, images/book/item5@2x.jpg 2000w" />
+    <img src="images/book/item5.jpg" alt="Sikander Poster" />
+</picture>
+<div class="break"></div>
 <picture class="images">
     <source srcset="images/poster/items1.jpg 1000w, images/posters/items1.jpg 2000w" />
     <img src="images/posters/items1.jpg" alt="Sikander Poster" />
@@ -706,8 +711,8 @@
     <img src="images/ill/items3.jpg" alt="" /></picture>
 <div class="break"></div>
 <picture class="images">
-    <source srcset="images/ill/items12.jpg 1000w, images/ill/items12@2x.jpg 2000w" />
-    <img src="images/ill/items12.jpg"alt="" />
+    <source srcset="images/ill/items14.jpg 1000w, images/ill/items14@2x.jpg 2000w" />
+    <img src="images/ill/items14.jpg"alt="" />
 </picture> 
 </div>
 <div class="element clearfix col1-3 grey auto ill">
@@ -736,7 +741,7 @@
 <!-- End Folio Item -->              
         <div class="element clearfix col1-3 grey back-button book anchor logo tees platinum maine oaks home whtmtn bjs vans deer pad ill staples sneaks">
             <a class="folioLink" href="#portfolio" title="" class="whole-tile">
-                <h5>Back to Portfolio<span class="arrow">→</span></h5>
+                <h5>Back to the Lab.<span class="arrow">→</span></h5>
             </a>
         </div>
               
