--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </picture>
             </div><!--MAssArt-->
             <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#staples" title="Staples">
-              <picture class="images"> <img src="images/staples/thumbs.jpg" srcset="images/staples/thumbs.jpg 1x, images/staples/thumbs-lrg.jpg 1.5x" alt="Staples" class="slip" /> </picture> </a>
+              <picture class="images"> <img src="images/staples/thumbs.jpg" srcset="images/staples/thumbs.jpg 1x, images/staples/thumbs@2x.jpg 1.5x" alt="Staples" class="slip" /> </picture> </a>
             </div><!--Staples-->
             <div class="element clearfix col1-3 portfolio"><a class="folioLink" href="#sneaks" title="">
                 <picture class="images">
@@ -293,8 +293,8 @@
 <!-- Staples Folio Item -->              
 <div class="element clearfix col2-3 full staples">
 <picture class="images">
-    <source srcset="images/staples/items1.jpg 1000w, images/staples/items1@2x.jpg 2000w" />
-    <img src="images/staples/items1.jpg" alt="UI 1" />
+    <source srcset="images/staples/items3.jpg 1000w, images/staples/items3@2x.jpg 2000w" />
+    <img src="images/staples/items3.jpg" alt="UI 1" />
 </picture>
 <div class="break"></div>
 <picture class="images">
@@ -579,7 +579,7 @@
 <!-- End Folio Item --> 
               
 <!-- Tees Folio Item -->
-<div class="element clearfix col2-3 full tees">
+<div class="element clearfix col3-3 full tees">
     <picture class="images"> <img src="images/tee/items7.jpg" srcset="images/tee/items7.jpg 1x, images/tee/items7@2x.jpg 1.5x" alt="Geometric Cat Tee-Shirt" /></picture>
     <div class="break"></div>
     <picture class="images"> <img src="images/tee/items4.jpg" srcset="images/tee/items4.jpg 1x, images/tee/items4@2x.jpg 1.5x" alt="Geometric Cat Tee-Shirt" /></picture>
@@ -683,10 +683,14 @@
 <div class="element  clearfix col1-3 grey auto sneaks">
     <div class="icon-holder quote"></div>
         <blockquote>
-            <p>all is good, <br>if the soup is good</p>
+            <p>if the soup is good, <br>all is good</p>
             <p class="small">- somebody</p>
         </blockquote>
-</div>              
+</div>
+<div class="element clearfix col1-3 grey auto sneaks">
+    <h4><strong>Interaction</strong></h4>
+    <p>Digital publication is more than just page layout, it's dynamic, interactive, exciting, and when done well the user wants to learn and engage with more of the publishers content.</p>
+</div>
 <!-- End Folio Item -->
 
 <!-- ill FOlio Item -->
