--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="element clearfix col1-3 grey home"> 
-                <a href="mailto:josphtaylor@gmail.com" title="CV Request" target="_blank" class="whole-tile">
+                <a href="images/documents/CV_JosephTaylor.pdf" target="_blank" title="CV Request" target="_blank" class="whole-tile">
                     <p class="small">The CV</p>
                     <h3>Download a copy of my Resum&eacute;</h3>
                 <div class="bottom">
@@ -687,10 +687,7 @@
             <p class="small">- somebody</p>
         </blockquote>
 </div>
-<div class="element clearfix col1-3 grey auto sneaks">
-    <h4><strong>Interaction</strong></h4>
-    <p>Digital publication is more than just page layout, it's dynamic, interactive, exciting, and when done well the user wants to learn and engage with more of the publishers content.</p>
-</div>
+
 <!-- End Folio Item -->
 
 <!-- ill FOlio Item -->
