--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
     <img src="images/staples/items3.jpg" alt="UI 1" />
 </picture>
 <div class="break"></div>
-<picture class="images">
+<!--<picture class="images">
     <source srcset="images/staples/items2.jpg 1000w, images/staples/items2@2x.jpg 2000w" />
-    <img src="images/staples/items2.jpg" alt="UI 2" /></picture>
+    <img src="images/staples/items2.jpg" alt="UI 2" /></picture>-->
 </div>
 <div class="element clearfix col1-3 grey auto staples">
     <h3><strong>Staples</strong></h3>
@@ -711,10 +711,10 @@
     <source srcset="images/ill/item3.jpg 1000w, images/ill/items3.jpg 2000w" />
     <img src="images/ill/items3.jpg" alt="" /></picture>
 <div class="break"></div>
-<picture class="images">
+<!--<picture class="images">
     <source srcset="images/ill/items14.jpg 1000w, images/ill/items14@2x.jpg 2000w" />
     <img src="images/ill/items14.jpg"alt="" />
-</picture> 
+</picture> -->
 </div>
 <div class="element clearfix col1-3 grey auto ill">
     <h3><strong>Art Print</strong></h3>
