--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
             </div>
 <!-- End Home Items -->              
 <!-- Start Portfolio Thumbs -->
-            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#pad" title="">
+            <!--<div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#pad" title="">
               <picture class="images"> <img src="images/iPad/thumbs.jpg" srcset="images/iPad/thumbs.jpg 1x, images/iPad/thumbs@2x.jpg 1.5x" alt="Digital Publication" class="slip" /> </picture>
               </a>
             </div><!--Vienna--> 
-            <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#whtmtn" title="White Mountaineering">
+            <!--<div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#whtmtn" title="White Mountaineering">
                   <picture class="images"> <img src="images/whtmtn/thumbs.jpg" srcset="images/whtmtn/thumbs.jpg 1x, images/whtmtn/thumbs@2x.jpg 1.5x" alt="White Mountaineering" class="slip" /> </picture> </a>
             </div><!--WhiteMount-->
             <div class="element clearfix col1-3 portfolio">
@@ -173,19 +173,19 @@
                     <picture class="images"> <img src="images/anchorage/thumbs.jpg" srcset="images/anchorage/thumbs.jpg 1x, images/anchorage/thumbs@2x.jpg 1.5x" alt="Anchorage 1770<br></>Visit Site" class="slip" /> </picture>
                 </a>
             </div><!--Anchorage-->
-            <div class="element clearfix col2-3 auto portfolio">
-                <picture class="images">
-                    <img src="images/ill/items2.jpg" srcset="images/ill/items2.jpg 1x, images/ill/items2.jpg 1.5x" alt="Getting Ill" class="" />
-                </picture>
-            </div><!--Supercussion-->
-            <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#bjs" title="BJ's Wholesale">
-                  <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="BJ's Wholesale" class="slip" /> </picture> </a>
-            </div><!--BJS-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="#book" title="Print Design">
                     <picture class="images"> <img src="images/book/thumbs.jpg" srcset="images/book/thumbs.jpg 1x, images/book/thumbs@2x.jpg 1.5x" alt="Print<br></>Publication" class="slip" /> </picture>
                 </a> 
             </div><!--Book-->
+            <div class="element clearfix col1-3 portfolio"> <a class="folioLink" href="#bjs" title="BJ's Wholesale">
+                  <picture class="images"> <img src="images/bjs/thumbs.jpg" srcset="images/bjs/thumbs.jpg 1x, images/bjs/thumbs@2x.jpg 1.5x" alt="BJ's Wholesale" class="slip" /> </picture> </a>
+            </div><!--BJS-->
+            <div class="element clearfix col2-3 auto portfolio">
+                <picture class="images">
+                    <img src="images/ill/items2.jpg" srcset="images/ill/items2.jpg 1x, images/ill/items2.jpg 1.5x" alt="Getting Ill" class="" />
+                </picture>
+            </div><!--Supercussion-->
             <div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.12oaksnc.com/holly-springs/community-map/" target="_blank" title="12Oaks North Carolina">
                     <picture class="images"> <img src="images/oaks/thumbs.jpg" srcset="images/oaks/thumbs.jpg 1x, images/oaks/thumbs@2x.jpg 1.5x" alt="12 Oaks<br></>Visit Site" class="slip linkto" /> </picture>
@@ -220,22 +220,21 @@
                     <img src="images/posters/items1.jpg" srcset="images/posters/items1.jpg 1x, images/posters/items1.jpg 1.5x" alt="MAss Art" class="" />
                 </picture>
             </div><!--MAssArt-->
-            <div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#staples" title="Staples">
+            <!--<div class="element  clearfix col1-3 portfolio"> <a class="folioLink" href="#staples" title="Staples">
               <picture class="images"> <img src="images/staples/thumbs.jpg" srcset="images/staples/thumbs.jpg 1x, images/staples/thumbs@2x.jpg 1.5x" alt="Staples" class="slip" /> </picture> </a>
             </div><!--Staples-->
-            <div class="element clearfix col1-3 portfolio"><a class="folioLink" href="#sneaks" title="">
+            <!--<div class="element clearfix col1-3 portfolio"><a class="folioLink" href="#sneaks" title="">
                 <picture class="images">
                     <img src="images/sneaks/thumbs.jpg" srcset="images/sneaks/thumbs.jpg 1x, images/sneaks/thumbs.jpg 1.5x" alt="Getting Ill" class="slip" />
                 </picture>
                 </a>
             </div><!--Sneaks-->
-            
             <div class="element clearfix col1-3 portfolio"><a class="folioLink" href="#ill" title="">
                 <picture class="images">
                     <img src="images/ill/thumbs.jpg" srcset="images/ill/thumbs.jpg 1x, images/ill/thumbs.jpg 1.5x" alt="Getting Ill" class="slip" />
                 </picture>
                 </a>
-            </div><!--Sneaks-->
+            </div><!--Illustrate-->
             <!--<div class="element  clearfix col1-3 portfolio">
                 <a class="folioLink" href="https://www.platinumabq.com/the-units.html" target="_blank" title="Platinum ABQ">
                     <picture class="images"> <img src="images/platinum/thumbs.jpg" srcset="images/platinum/thumbs.jpg 1x, images/platinum/thumbs@2x.jpg 1.5x" alt="Platinum ABQ<br></>Visit Site" class="slip" /> </picture>
@@ -687,7 +686,6 @@
             <p class="small">- somebody</p>
         </blockquote>
 </div>
-
 <!-- End Folio Item -->
 
 <!-- ill FOlio Item -->
