--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
     </ul>
     <div class="social-links">
       <ul class="social-list clearfix">
-        <li><a href="https://www.linkedin.com/in/josphtaylor" class="linkedin" target="_blank"></a></li>
-        <li><a href="https://instagram.com/c0lorcraft" class="instagram" target="_blank"></a></li>
+        <li><a href="https://instagram.com/wontnameme" class="instagram" target="_blank"></a></li>
       </ul>
     </div>
   </nav>
